[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/HurtboxShape.tscn" type="PackedScene" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://scenes/Enemy.gd" type="Script" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 22, 22.5 )

[sub_resource type="CircleShape2D" id=3]
radius = 151.476

[sub_resource type="RectangleShape2D" id=4]

[node name="Enemy" type="KinematicBody2D"]
position = Vector2( 274, 94 )
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
modulate = Color( 0.776471, 0.0980392, 0.0980392, 1 )
scale = Vector2( 0.75, 0.75 )
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -0.5 )
shape = SubResource( 2 )

[node name="PlayerDetectionZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionZone"]
visible = false
shape = SubResource( 3 )

[node name="PatrolTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="HurtboxShape" parent="." instance=ExtResource( 1 )]
collision_layer = 8

[node name="CollisionShape2D" parent="HurtboxShape" index="0"]
scale = Vector2( 2.09075, 2.09075 )
shape = SubResource( 4 )

[node name="InvulnerabilityTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="health_updated" from="." to="." method="_on_Enemy_health_updated"]
[connection signal="body_entered" from="PlayerDetectionZone" to="." method="_on_PlayerDetectionZone_body_entered"]
[connection signal="body_exited" from="PlayerDetectionZone" to="." method="_on_PlayerDetectionZone_body_exited"]
[connection signal="timeout" from="PatrolTimer" to="." method="_on_PatrolTimer_timeout"]
[connection signal="area_entered" from="HurtboxShape" to="." method="_on_HurtboxShape_area_entered"]

[editable path="HurtboxShape"]
